--- a/app/home/templates/get_layer_two.html
+++ b/app/home/templates/get_layer_two.html
@@ -47,9 +47,7 @@
           <div class="card-header border-0">
             <div class="row align-items-center">
               <div class="col">
-                <h3 class="mb-0" style="text-align:left">Vlans
-                  <span><a href="{{ url_for('base_blueprint.add_vlan') }}"><input value="Add Vlan" name="addVlan" class="btn btn-dark btn-round-xs float-right" role="status" type="button" style="margin-left: 15px"></a></span>
-                </h3>
+                <h3 class="mb-0" style="text-align:left">Vlans</h3>
               </div>
             </div>
           </div>
