--- a/app/base/templates/accounts/login.html
+++ b/app/base/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base-fullscreen.html' %}
 
-{% block title %} IOS-XE Login {% endblock title %}
+{% block title %} NXOS Login {% endblock title %}
 
 {% block stylesheets %}{% endblock stylesheets %}
 
@@ -13,7 +13,7 @@
 
             <div class="card-body px-lg-5 py-lg-5 text-center">
 
-              <h3 class="mb-4 text-center">Device Login</h3>
+              <h3 class="mb-4 text-center">NXOS Login</h3>
               <br />
               <form role="form" method="post" action="">
 
